<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="15dp"
        android:layout_marginTop="9dp"
        android:text="@string/firstname"
        android:id="@+id/first_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter First Name"
        android:ems="10"
        android:textSize="15dp"
        android:layout_marginTop="-5dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editFirstName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:text="@string/lastname"
        android:id="@+id/last_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Last Name"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editLastName" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:text="@string/age"
        android:id="@+id/user_age"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Age"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="55dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editAge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_age"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="105dp"
        android:text="@string/address1"
        android:id="@+id/user_addressone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Address Line 1"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editAddressOne" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_addressone"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp"
        android:text="@string/address2"
        android:id="@+id/user_addresstwo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Address Line 2"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="125dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editAddressTwo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_addresstwo"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="175dp"
        android:text="@string/city"
        android:id="@+id/user_city"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter City"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="160dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editCity" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_city"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="210dp"
        android:text="@string/state"
        android:id="@+id/user_state"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter State"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="195dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editState" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_state"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="245dp"
        android:text="@string/zip"
        android:id="@+id/user_zip"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Zip Code"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="230dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editZip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_zip"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="280dp"
        android:text="@string/user"
        android:id="@+id/user_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter User Name"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="265dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editUser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="315dp"
        android:text="@string/password"
        android:id="@+id/user_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Password"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="300dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_password"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="350dp"
        android:text="@string/email"
        android:id="@+id/user_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Email ID"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="335dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="385dp"
        android:text="@string/phone"
        android:id="@+id/user_phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Phone Number"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="370dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_phone"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="420dp"
        android:text="@string/registerid"
        android:id="@+id/user_register"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Registration ID"
        android:ems="10"
        android:textSize="15dp"
        android:layout_toRightOf="@id/last_name"
        android:layout_marginTop="405dp"
        android:layout_toEndOf="@+id/user_addressone"
        android:id="@+id/editRegister" />

    <Button
        android:text="REGISTER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRegister"
        android:layout_alignStart="@+id/editRegister"
        android:id="@+id/registerButton" />

</RelativeLayout>