<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gkart.myapplication.Fragment3">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:text="TRAVEL REGISTRATION"
        android:textColor="#000"
        android:textSize="30dp"
        android:id="@+id/registration_id"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/radio_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_miles_five"
            android:textSize="25dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="100dp"
            android:text="@string/radio1id" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_miles_ten"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/radio2id"/>
    </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="150dp"
            android:textSize="15dp"
            android:text="@string/registerButton"
            android:id="@+id/registrationButton"/>
    </RelativeLayout>
</FrameLayout>
